Revert "make header position sticky instead of fixed, so that the table doesn't go behind it (and so we don't need to add padding)"
This reverts commit 4de36072cc00e444a796cb786841a2b2fc0614d5.

reverted because it breaks horizontal scrolling (the header doesn't remain on the screen when scrolling horizontally)

--- a/web/style/date.css
+++ b/web/style/date.css
@@ -1,5 +1,5 @@
 .page-header {
-    position: sticky;
+    position: fixed;
     top: 0;
     width: 100%;
     height: var(--header_height);
